- Added Designation and other domain tests - Added equals and hashCode

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 spring:
+  profiles: dev
   datasource:
     url: jdbc:mysql://localhost:3306/PerformanceAppraisal
     username: root
@@ -6,3 +7,12 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+    show-sql: true
+
+---
+
+spring:
+  profiles: test
+  datasource:
+    driverClassName: org.h2.Driver
+    url: jdbc:h2:mem:test
