--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
-  #profiles: dev
+  profiles: dev
   datasource:
     url: jdbc:mysql://localhost:3306/PerformanceAppraisal
     username: root
